# jsonresume-multilang

./: Pipfile  README.md  jsonresume_multilang.py  pyproject.toml
